tests/test_input_files/good/test_good_func_1.punkt
function f <> -> int {
	return 0.
}

main {
	print f().
}
