tests/test_input_files/bad/test_bad_return_stmt_1.punkt
function f <> -> int {
	return true.
}

main {
	f().
}
